@@ -1,3 +1,7 @@
+2003-06-05  Sam Steingold  <sds@gnu.org>
+
+	* pathname.d (LAUNCH) [WIN32_NATIVE]: fixed GC-safety
+
 2003-06-04  Sam Steingold  <sds@gnu.org>
 
 	* pathname.d (LAUNCH): :WAIT defaults to T,
